@@ -8,6 +8,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import com.devonfw.tools.ide.cli.CliArgument;
 import com.devonfw.tools.ide.cli.CliArguments;
 import com.devonfw.tools.ide.completion.CompletionCandidateCollector;
@@ -18,33 +21,50 @@ import com.devonfw.tools.ide.property.Property;
 import com.devonfw.tools.ide.tool.androidstudio.AndroidStudio;
 import com.devonfw.tools.ide.tool.aws.Aws;
 import com.devonfw.tools.ide.tool.az.Azure;
+import com.devonfw.tools.ide.tool.cdk.Cdk;
+import com.devonfw.tools.ide.tool.claude.Claude;
+import com.devonfw.tools.ide.tool.copilot.Copilot;
 import com.devonfw.tools.ide.tool.corepack.Corepack;
 import com.devonfw.tools.ide.tool.docker.Docker;
 import com.devonfw.tools.ide.tool.dotnet.DotNet;
 import com.devonfw.tools.ide.tool.eclipse.Eclipse;
 import com.devonfw.tools.ide.tool.gcviewer.GcViewer;
 import com.devonfw.tools.ide.tool.gh.Gh;
+import com.devonfw.tools.ide.tool.go.Go;
 import com.devonfw.tools.ide.tool.graalvm.GraalVm;
 import com.devonfw.tools.ide.tool.gradle.Gradle;
+import com.devonfw.tools.ide.tool.gui.Gui;
 import com.devonfw.tools.ide.tool.helm.Helm;
+import com.devonfw.tools.ide.tool.inso.Inso;
 import com.devonfw.tools.ide.tool.intellij.Intellij;
 import com.devonfw.tools.ide.tool.jasypt.Jasypt;
 import com.devonfw.tools.ide.tool.java.Java;
 import com.devonfw.tools.ide.tool.jmc.Jmc;
+import com.devonfw.tools.ide.tool.just.Just;
 import com.devonfw.tools.ide.tool.kotlinc.Kotlinc;
 import com.devonfw.tools.ide.tool.kotlinc.KotlincNative;
 import com.devonfw.tools.ide.tool.kubectl.KubeCtl;
 import com.devonfw.tools.ide.tool.lazydocker.LazyDocker;
+import com.devonfw.tools.ide.tool.msvc.Msvc;
 import com.devonfw.tools.ide.tool.mvn.Mvn;
+import com.devonfw.tools.ide.tool.mvnd.Mvnd;
+import com.devonfw.tools.ide.tool.nest.Nest;
 import com.devonfw.tools.ide.tool.ng.Ng;
 import com.devonfw.tools.ide.tool.node.Node;
 import com.devonfw.tools.ide.tool.npm.Npm;
 import com.devonfw.tools.ide.tool.oc.Oc;
 import com.devonfw.tools.ide.tool.pgadmin.PgAdmin;
+import com.devonfw.tools.ide.tool.pip.Pip;
 import com.devonfw.tools.ide.tool.pycharm.Pycharm;
 import com.devonfw.tools.ide.tool.python.Python;
 import com.devonfw.tools.ide.tool.quarkus.Quarkus;
+import com.devonfw.tools.ide.tool.rust.Rust;
+import com.devonfw.tools.ide.tool.soapui.SoapUi;
 import com.devonfw.tools.ide.tool.sonar.Sonar;
+import com.devonfw.tools.ide.tool.spring.Spring;
+import com.devonfw.tools.ide.tool.spyder.Spyder;
+import com.devonfw.tools.ide.tool.squirrelsql.SquirrelSql;
+import com.devonfw.tools.ide.tool.task.Task;
 import com.devonfw.tools.ide.tool.terraform.Terraform;
 import com.devonfw.tools.ide.tool.tomcat.Tomcat;
 import com.devonfw.tools.ide.tool.uv.Uv;
@@ -55,6 +75,8 @@ import com.devonfw.tools.ide.tool.yarn.Yarn;
  * Implementation of {@link CommandletManager}.
  */
 public class CommandletManagerImpl implements CommandletManager {
+
+  private static final Logger LOG = LoggerFactory.getLogger(CommandletManagerImpl.class);
 
   private final IdeContext context;
 
@@ -94,13 +116,16 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new StatusCommandlet(context));
     add(new RepositoryCommandlet(context));
     add(new UninstallCommandlet(context));
+    add(new LnCommandlet(context));
     add(new UpdateCommandlet(context));
     add(new UpgradeSettingsCommandlet(context));
     add(new CreateCommandlet(context));
     add(new BuildCommandlet(context));
+    add(new ReleaseCommandlet(context));
     add(new InstallPluginCommandlet(context));
     add(new UninstallPluginCommandlet(context));
     add(new UpgradeCommandlet(context));
+    add(new TruststoreCommandlet(context));
     add(new Gh(context));
     add(new Helm(context));
     add(new Java(context));
@@ -108,6 +133,7 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new Node(context));
     add(new Npm(context));
     add(new Mvn(context));
+    add(new Msvc(context));
     add(new RefactorCommandlet(context));
     add(new GcViewer(context));
     add(new Gradle(context));
@@ -115,15 +141,18 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new Terraform(context));
     add(new Oc(context));
     add(new Quarkus(context));
+    add(new Rust(context));
     add(new Kotlinc(context));
     add(new KotlincNative(context));
     add(new KubeCtl(context));
     add(new Tomcat(context));
+    add(new Task(context));
     add(new Vscode(context));
     add(new Azure(context));
     add(new Aws(context));
     add(new Jmc(context));
     add(new DotNet(context));
+    add(new Inso(context));
     add(new Intellij(context));
     add(new Jasypt(context));
     add(new Docker(context));
@@ -134,9 +163,22 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new LazyDocker(context));
     add(new Python(context));
     add(new Pycharm(context));
+    add(new Spring(context));
     add(new Uv(context));
     add(new Yarn(context));
+    add(new Copilot(context));
     add(new Corepack(context));
+    add(new Pip(context));
+    add(new Go(context));
+    add(new Gui(context));
+    add(new SquirrelSql(context));
+    add(new Spyder(context));
+    add(new Nest(context));
+    add(new Cdk(context));
+    add(new Claude(context));
+    add(new Mvnd(context));
+    add(new Just(context));
+    add(new SoapUi(context));
   }
 
   /**
@@ -181,7 +223,7 @@ public class CommandletManagerImpl implements CommandletManager {
 
     Commandlet duplicate = this.firstKeywordMap.putIfAbsent(keyword, commandlet);
     if (duplicate != null) {
-      this.context.debug("Duplicate keyword {} already used by {} so it cannot be associated also with {}", keyword, duplicate, commandlet);
+      LOG.debug("Duplicate keyword {} already used by {} so it cannot be associated also with {}", keyword, duplicate, commandlet);
     }
   }
 
@@ -285,7 +327,7 @@ public class CommandletManagerImpl implements CommandletManager {
           if (properties.isEmpty()) {
             assert false : cmd.getClass().getSimpleName() + " has no properties!";
           } else {
-            Property<?> property = properties.get(0);
+            Property<?> property = properties.getFirst();
             if (property instanceof KeywordProperty) {
               boolean matches = property.apply(arguments.copy(), context, cmd, this.collector);
               if (matches) {
