@@ -2,7 +2,6 @@ package com.devonfw.tools.ide.url.updater;
 
 import java.nio.file.Path;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 
 import org.slf4j.Logger;
@@ -13,6 +12,8 @@ import com.devonfw.tools.ide.url.model.report.UrlFinalReport;
 import com.devonfw.tools.ide.url.tool.androidstudio.AndroidStudioUrlUpdater;
 import com.devonfw.tools.ide.url.tool.aws.AwsUrlUpdater;
 import com.devonfw.tools.ide.url.tool.az.AzureUrlUpdater;
+import com.devonfw.tools.ide.url.tool.claude.ClaudeUrlUpdater;
+import com.devonfw.tools.ide.url.tool.copilot.CopilotUrlUpdater;
 import com.devonfw.tools.ide.url.tool.corepack.CorepackUrlUpdater;
 import com.devonfw.tools.ide.url.tool.docker.DockerDesktopUrlUpdater;
 import com.devonfw.tools.ide.url.tool.docker.DockerRancherDesktopUrlUpdater;
@@ -20,23 +21,27 @@ import com.devonfw.tools.ide.url.tool.dotnet.DotNetUrlUpdater;
 import com.devonfw.tools.ide.url.tool.eclipse.EclipseCppUrlUpdater;
 import com.devonfw.tools.ide.url.tool.eclipse.EclipseJavaUrlUpdater;
 import com.devonfw.tools.ide.url.tool.eclipse.EclipseJeeUrlUpdater;
+import com.devonfw.tools.ide.url.tool.gcloganalyzer.GcLogAnalyzerUrlUpdater;
 import com.devonfw.tools.ide.url.tool.gcloud.GCloudUrlUpdater;
 import com.devonfw.tools.ide.url.tool.gcviewer.GcViewerUrlUpdater;
 import com.devonfw.tools.ide.url.tool.gh.GhUrlUpdater;
+import com.devonfw.tools.ide.url.tool.go.GoUrlUpdater;
 import com.devonfw.tools.ide.url.tool.graalvm.GraalVmCommunityUpdater;
 import com.devonfw.tools.ide.url.tool.graalvm.GraalVmOracleUrlUpdater;
 import com.devonfw.tools.ide.url.tool.gradle.GradleUrlUpdater;
 import com.devonfw.tools.ide.url.tool.helm.HelmUrlUpdater;
+import com.devonfw.tools.ide.url.tool.inso.InsoUrlUpdater;
 import com.devonfw.tools.ide.url.tool.intellij.IntellijUrlUpdater;
 import com.devonfw.tools.ide.url.tool.jasypt.JasyptUrlUpdater;
+import com.devonfw.tools.ide.url.tool.java.JavaAzulUrlUpdater;
 import com.devonfw.tools.ide.url.tool.java.JavaUrlUpdater;
 import com.devonfw.tools.ide.url.tool.jenkins.JenkinsUrlUpdater;
 import com.devonfw.tools.ide.url.tool.jmc.JmcUrlUpdater;
 import com.devonfw.tools.ide.url.tool.kotlinc.KotlincNativeUrlUpdater;
 import com.devonfw.tools.ide.url.tool.kotlinc.KotlincUrlUpdater;
 import com.devonfw.tools.ide.url.tool.lazydocker.LazyDockerUrlUpdater;
-import com.devonfw.tools.ide.url.tool.mvn.Mvn4UrlUpdater;
 import com.devonfw.tools.ide.url.tool.mvn.MvnUrlUpdater;
+import com.devonfw.tools.ide.url.tool.mvnd.MvndUrlUpdater;
 import com.devonfw.tools.ide.url.tool.ng.NgUrlUpdater;
 import com.devonfw.tools.ide.url.tool.node.NodeUrlUpdater;
 import com.devonfw.tools.ide.url.tool.npm.NpmUrlUpdater;
@@ -44,38 +49,41 @@ import com.devonfw.tools.ide.url.tool.oc.OcUrlUpdater;
 import com.devonfw.tools.ide.url.tool.pgadmin.PgAdminUrlUpdater;
 import com.devonfw.tools.ide.url.tool.pip.PipUrlUpdater;
 import com.devonfw.tools.ide.url.tool.pycharm.PycharmUrlUpdater;
-import com.devonfw.tools.ide.url.tool.python.PythonUrlUpdater;
 import com.devonfw.tools.ide.url.tool.quarkus.QuarkusUrlUpdater;
+import com.devonfw.tools.ide.url.tool.ruby.RubyUrlUpdater;
+import com.devonfw.tools.ide.url.tool.rust.RustUrlUpdater;
+import com.devonfw.tools.ide.url.tool.soapui.SoapUiUrlUpdater;
 import com.devonfw.tools.ide.url.tool.sonar.SonarUrlUpdater;
+import com.devonfw.tools.ide.url.tool.squirrelsql.SquirrelSqlUrlUpdater;
 import com.devonfw.tools.ide.url.tool.terraform.TerraformUrlUpdater;
 import com.devonfw.tools.ide.url.tool.tomcat.TomcatUrlUpdater;
 import com.devonfw.tools.ide.url.tool.uv.UvUrlUpdater;
 import com.devonfw.tools.ide.url.tool.vscode.VsCodeUrlUpdater;
+import com.devonfw.tools.ide.url.tool.vscode.VsCodiumUrlUpdater;
 
 /**
  * The {@code UpdateManager} class manages the update process for various tools by using a list of {@link AbstractUrlUpdater}s to update the
- * {@link UrlRepository}. The list of {@link AbstractUrlUpdater}s contains crawlers for different tools and services, To use the UpdateManager, simply create an
- * instance with the path to the repository as a parameter and call the {@link #updateAll(UrlFinalReport)} method.
+ * {@link UrlRepository}. Each {@link AbstractUrlUpdater} is responsible for a specific {@link AbstractUrlUpdater#getTool() tool} and typically also edition.
  */
 public class UpdateManager extends AbstractProcessorWithTimeout {
 
-  private static final Logger logger = LoggerFactory.getLogger(AbstractUrlUpdater.class);
+  private static final Logger logger = LoggerFactory.getLogger(UpdateManager.class);
 
   private final UrlRepository urlRepository;
 
   private final UrlFinalReport urlFinalReport;
 
-  private final List<AbstractUrlUpdater> updaters = Arrays.asList(
-      new AndroidStudioUrlUpdater(), new AwsUrlUpdater(), new AzureUrlUpdater(), new CorepackUrlUpdater(), new DockerDesktopUrlUpdater(),
-      new DotNetUrlUpdater(),
-      new EclipseCppUrlUpdater(), new EclipseJeeUrlUpdater(), new EclipseJavaUrlUpdater(), new GCloudUrlUpdater(),
-      new GcViewerUrlUpdater(), new GhUrlUpdater(), new GraalVmCommunityUpdater(), new GraalVmOracleUrlUpdater(),
-      new GradleUrlUpdater(), new HelmUrlUpdater(), new IntellijUrlUpdater(), new JasyptUrlUpdater(),
-      new JavaUrlUpdater(), new JenkinsUrlUpdater(), new JmcUrlUpdater(), new KotlincUrlUpdater(),
-      new KotlincNativeUrlUpdater(), new LazyDockerUrlUpdater(), new MvnUrlUpdater(), new Mvn4UrlUpdater(),
-      new NgUrlUpdater(), new NodeUrlUpdater(), new NpmUrlUpdater(), new OcUrlUpdater(), new PgAdminUrlUpdater(), new PipUrlUpdater(), new PycharmUrlUpdater(),
-      new PythonUrlUpdater(), new QuarkusUrlUpdater(), new DockerRancherDesktopUrlUpdater(), new SonarUrlUpdater(),
-      new TerraformUrlUpdater(), new TomcatUrlUpdater(), new UvUrlUpdater(), new VsCodeUrlUpdater());
+  private final List<AbstractUrlUpdater> updaters = List.of(
+      new AndroidStudioUrlUpdater(), new AwsUrlUpdater(), new AzureUrlUpdater(), new ClaudeUrlUpdater(), new CopilotUrlUpdater(), new CorepackUrlUpdater(),
+      new DockerDesktopUrlUpdater(), new DotNetUrlUpdater(), new EclipseCppUrlUpdater(), new EclipseJeeUrlUpdater(), new EclipseJavaUrlUpdater(),
+      new GcLogAnalyzerUrlUpdater(), new GCloudUrlUpdater(), new GcViewerUrlUpdater(), new GhUrlUpdater(), new GoUrlUpdater(), new GraalVmCommunityUpdater(),
+      new GraalVmOracleUrlUpdater(), new GradleUrlUpdater(), new HelmUrlUpdater(), new InsoUrlUpdater(), new IntellijUrlUpdater(), new JasyptUrlUpdater(),
+      new JavaAzulUrlUpdater(), new JavaUrlUpdater(), new JenkinsUrlUpdater(), new JmcUrlUpdater(), new KotlincUrlUpdater(), new KotlincNativeUrlUpdater(),
+      new LazyDockerUrlUpdater(), new MvnUrlUpdater(), new MvndUrlUpdater(), new NgUrlUpdater(), new NodeUrlUpdater(), new NpmUrlUpdater(), new OcUrlUpdater(),
+      new PgAdminUrlUpdater(), new PipUrlUpdater(), new PycharmUrlUpdater(), new QuarkusUrlUpdater(), new RubyUrlUpdater(), new RustUrlUpdater(),
+      new DockerRancherDesktopUrlUpdater(), new SonarUrlUpdater(), new SquirrelSqlUrlUpdater(), new SoapUiUrlUpdater(), new TerraformUrlUpdater(),
+      new TomcatUrlUpdater(), new UvUrlUpdater(), new VsCodeUrlUpdater(), new VsCodiumUrlUpdater());
+
 
   /**
    * The constructor.
@@ -88,6 +96,14 @@ public class UpdateManager extends AbstractProcessorWithTimeout {
     this.urlRepository = UrlRepository.load(pathToRepository);
     this.urlFinalReport = urlFinalReport;
     setExpirationTime(expirationTime);
+  }
+
+  /**
+   * @return the {@link List} with all registered {@link AbstractUrlUpdater updaters}.
+   */
+  public List<AbstractUrlUpdater> getUpdaters() {
+
+    return this.updaters;
   }
 
   /**
@@ -111,7 +127,7 @@ public class UpdateManager extends AbstractProcessorWithTimeout {
   public void update(String tool) {
 
     for (AbstractUrlUpdater updater : this.updaters) {
-      if (updater.getTool().equals(tool)) {
+      if (updater.getTool().equals(tool) || updater.getClass().getSimpleName().equals(tool)) {
         update(updater);
       }
     }
